test/src/test_deprecated_float_to_string.mlt
open Core_kernel

let _ = Float.to_string 0.
[%%expect{|
Line _, characters 8-23:
Warning 3: deprecated: Core_kernel.Float.to_string
[since 2017-03]: Use [to_string_round_trippable], [to_string_hum], or [sprintf] with the desired float format.
Line _:
Error: Some fatal warnings were triggered (1 occurrences)
|}]
